# sages

./: .gitignore  .graphifyignore  2026-06-28-mini-ai-sdlc-evolution.md  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
.serena/: project.yml
graphify-out/: .graphify_analysis.json  graph.json  manifest.json
opencode/: build-self-contained-tools.ts  package.json  tsconfig.json
pi-codebase-memory/: README.md  package.json  tsconfig.json
pi-evaluator/: .gitignore  README.md  USAGE.md  pyproject.toml
pi-evaluator/prompts/: __init__.py  design_metric.py
pi-evaluator/src/: __init__.py  __main__.py  comparator.py  config.py  evaluator.py  parser.py  phase_metrics.py  reporter.py  runner.py  scorer.py  types.py
pi-evaluator/src/cost/: __init__.py  analyzer.py
pi-evaluator/src/metrics/: __init__.py  code_eval.py  security.py  text_quality.py
pi-evaluator/src/pi_evaluator/: __init__.py  __main__.py  comparator.py  config.py  env_checker.py  evaluator.py  parser.py  phase_metrics.py  reporter.py  runner.py  scorer.py  types.py
pi-evaluator/tests/: __init__.py  test_config.py  test_cost.py  test_directory_evaluation.py  test_env_checker.py  test_evaluator.py  test_metrics.py  test_parser.py  test_pi_session_format.py  test_pi_sessions_directory.py  test_reporter.py  test_scorer.py  test_types.py
pi-graphify/: README.md  node_modules  package.json
pi-minimax/: .gitignore  AGENTS.md  README.md  package.json  tsconfig.json
pi-semantic-nudge/: README.md  package.json  tsconfig.json
pi-serena/: README.md  (+2 more)
(+463 files in other folders)
